# llama-pinyinIME

./: .gitignore  README-zh.md  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sx/llama/pinyinime/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/sx/llama/pinyinime/: IPinyinDecoderService.aidl
app/src/main/cpp/: Android.mk  CMakeLists.txt
app/src/main/cpp/android/: com_sx_llama_pinyinime_PinyinDecoderService.cpp
app/src/main/cpp/llama/: CMakeLists.txt
app/src/main/cpp/llama/examples/: CMakeLists.txt
app/src/main/cpp/llama/examples/interactive/: CMakeLists.txt  interactive.cpp
app/src/main/cpp/llama/examples/io-prompt/: CMakeLists.txt  io-prompt.cpp
app/src/main/cpp/llama/examples/main/: CMakeLists.txt
app/src/main/cpp/llama/examples/test/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/llama/prompts/: 1.txt  2.txt
app/src/main/java/com/sx/llama/pinyinime/: BalloonHint.java  CandidateView.java  CandidateViewListener.java  CandidatesContainer.java  ComposingView.java  (+18 more)
app/src/main/res/drawable/: arrow_bg.xml  candidate_hl_bg_color.xml  close_bg.xml  keyboard_close_bg.xml  normal_key_bg_color.xml  normal_key_bg_color_green.xml  normal_key_hl_bg_color.xml  skb_bg_color.xml
app/src/main/res/layout/: candidates_container.xml  floating_container.xml  skb_container.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
app/src/main/res/xml/: method.xml  settings.xml  skb_phone.xml  skb_qwerty.xml  skb_template1.xml
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
